Added forecast call, geocoding functionality

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "babel-core": "^5.2.9",
     "babel-loader": "^5.0.0",
     "classnames": "^2.0.0",
+    "express": "^4.12.3",
+    "forecastio": "^0.2.0",
+    "immutable": "^3.7.2",
     "react": "^0.13.2",
+    "react-script-loader": "0.0.1",
     "reflux": "^0.2.7",
     "superagent": "^1.2.0",
     "webpack": "^1.8.11",
@@ -17,7 +21,7 @@
     "autoprefixer-loader": "^1.2.0",
     "babel-runtime": "^5.2.9",
     "css-loader": "^0.12.0",
-    "immutable": "^3.7.2",
+    "json-loader": "^0.5.1",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
     "path": "^0.11.14",
