--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-core": "^5.2.9",
     "babel-loader": "^5.0.0",
+    "babel-runtime": "^5.2.9",
     "classnames": "^2.0.0",
     "express": "^4.12.3",
     "forecastio": "^0.2.0",
@@ -13,13 +14,10 @@
     "react": "^0.13.2",
     "react-script-loader": "0.0.1",
     "reflux": "^0.2.7",
-    "superagent": "^1.2.0",
-    "webpack": "^1.8.11",
-    "webpack-dev-server": "^1.8.2"
+    "superagent": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
-    "babel-runtime": "^5.2.9",
     "css-loader": "^0.12.0",
     "json-loader": "^0.5.1",
     "less": "^2.5.0",
@@ -27,7 +25,9 @@
     "path": "^0.11.14",
     "react-hot-loader": "^1.2.6",
     "react-router": "^0.13.3",
-    "style-loader": "^0.12.1"
+    "style-loader": "^0.12.1",
+    "webpack": "^1.8.11",
+    "webpack-dev-server": "^1.8.2"
   },
   "scripts": {
     "start": "webpack && webpack-dev-server --port 3000"
