--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
     "css-loader": "^0.12.0",
+    "file-loader": "^0.8.4",
     "json-loader": "^0.5.1",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
@@ -26,6 +27,7 @@
     "react-hot-loader": "^1.2.6",
     "react-router": "^0.13.3",
     "style-loader": "^0.12.1",
+    "url-loader": "^0.5.6",
     "webpack": "^1.8.11",
     "webpack-dev-server": "^1.8.2"
   },
