--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^0.13.2",
     "react-script-loader": "0.0.1",
     "reflux": "^0.2.7",
-    "superagent": "^1.2.0"
+    "superagent": "^1.2.0",
+    "superagent-jsonp": "0.0.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
