--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "forecastio": "^0.2.0",
     "immutable": "^3.7.2",
     "react": "^0.13.2",
-    "react-script-loader": "0.0.1",
     "reflux": "^0.2.7",
     "superagent": "^1.2.0",
     "superagent-jsonp": "0.0.3"
@@ -33,7 +32,8 @@
     "webpack-dev-server": "^1.8.2"
   },
   "scripts": {
-    "start": "webpack && webpack-dev-server --port 3000"
+    "start": "webpack && webpack-dev-server --port 3000",
+    "start-on-lan": "webpack && webpack-dev-server --host 192.168.0.100 --port 3000"
   },
   "author": "Jerridan Quiring",
   "license": "MIT"
