added google maps api key; configuration changes for express server

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "json-loader": "^0.5.1",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
+    "nodemon": "^1.9.2",
     "path": "^0.11.14",
     "react-hot-loader": "^1.2.6",
     "react-router": "^0.13.3",
@@ -32,8 +33,10 @@
     "webpack-dev-server": "^1.8.2"
   },
   "scripts": {
+    "pack" : "webpack",
     "start": "webpack && webpack-dev-server --port 3000",
-    "start-on-lan": "webpack && webpack-dev-server --host 192.168.0.100 --port 3000"
+    "start-on-lan": "webpack && webpack-dev-server --host 192.168.0.100 --port 3000",
+    "dev": "nodemon iris.js"
   },
   "author": "Jerridan Quiring",
   "license": "MIT"
